test/compile_errors/err_nested_fstring_direct.w
//! expect-check-fail: nested f-strings are not allowed

fn main:
    let x = 7
    let _s = f"outer {f\"inner {x}\"} end"
